@@ -45,7 +45,7 @@ AC_PROG_INSTALL
 AC_GNU_SOURCE
 
 # set CFLAGS and CXXFLAGS
-default_CFLAGS="-Wall -g -O3 -pthread"
+default_CFLAGS="-Wall -g -O0 -pthread"
 extended_CFLAGS=""
 case "${host_cpu}-${host_os}" in 
 	# Mac OS X
